# TARO

./: .gitignore  AGENTS.md  README.md  pom.xml  pyproject.toml
ResearchData/: taro_v11.md  taro_v11_impl_guide.md  taro_v11_learning_pathway.md
docs/: codex_repo_concern_map.md  codex_test_reference_map.md  runtime_execution_profile_refactor_plan.md  stage11_heuristics_impl.md  stage12_route_core_impl.md  stage13_bidirectional_td_astar_plan.md  stage13_delta_report.md  stage14_delta_report.md  stage14_one_to_many_dijkstra_matrix_plan.md  stage15_addressing_trait_plan.md  stage15_delta_report.md  stage16_delta_report.md  stage16_temporal_trait_plan.md  stage17_delta_report.md  stage17_transition_trait_plan.md  stage18_delta_report.md  stage18_trait_registry_plan.md  stage7_live_overlay_impl.md  taro_stagewise_v10_1_guide.html  taro_stagewise_v10_1_guide.md  taro_v11_architecture_plan.md  taro_v11_implementation_guide.md  taro_v11_single_source_of_truth.md  taro_v11_ssot_stagewise_breakdown.md  taro_v12_architecture_plan.md  taro_v12_v13_migration_report.md  taro_v13_architecture_plan.md  taro_v14_stagewise_breakdown.md  trait_runtime_lock_audit_report.md
scripts/: bootstrap_env.sh  check_env.sh  gen_flatbuffers.sh  render_md_to_pdf.py  run_java_tests.sh  run_python_tests.sh
src/main/java/org/Aayush/: Main.java
src/main/python/Utils/: IDMapper.py  __init__.py
src/main/python/tests/: test_IDMapper.py  test_package_layout.py
src/main/resources/flatbuffers/: TestTaroModel.py  taro_model.fbs
src/test/java/org/Aayush/: MainTest.java
(+344 files in other folders)
