[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "taro-python-utils"
version = "0.1.0"
description = "Python-side builder utilities for TARO."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Aayush" }
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]
docs = [
  "markdown>=3.6",
  "weasyprint>=62",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-dir]
"" = "src/main/python"

[tool.setuptools.packages.find]
where = ["src/main/python"]
include = ["Utils", "Utils.*"]
exclude = ["tests", "tests.*"]

[tool.pytest.ini_options]
testpaths = ["src/main/python/tests"]
addopts = "-ra"
